# mrifit

./: .gitignore  test
doc/: doxygen.cfg  doxygen_c++.cfg
src/py/models/: ideal.py
src/utils/configloader/: CMakeLists.txt  configloader.cpp  configloader.h  configloaderConfig.h.in  configloadererrorhandler.cpp  configloadererrorhandler.h  configloaderexception.h  demo.cpp  loaderexception.h
src/utils/configloader/configs/: configbuilder.cpp  configbuilder.h  datasetconfig.h  lmconfig.cpp  lmconfig.h  msedataconfig.cpp  msedataconfig.h  sliceprofileconfig.cpp  sliceprofileconfig.h
src/utils/configloader/loaders/: datasetconfigloader.cpp  datasetconfigloader.h  lmconfigloader.cpp  lmconfigloader.h  t2fitgfconfigloader.cpp  t2fitgfconfigloader.h
src/utils/configloader/resources/: CMakeLists.txt  basictypes.xsd  dataset.xsd  datatypes.xsd  t2fit.xsd
src/utils/configloader/testdata/: CMakeLists.txt  dataset.xml  test.xml  validate_test_files.py
src/utils/conversion/: datatypeconverter.cpp  datatypeconverter.h
src/utils/fitconfigloader/: CMakeLists.txt  demo.cpp  fitconfigloader.cpp  fitconfigloader.h
